--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <div class="game-screen" ng-view></div>
 
     <script src="components/lawnchair/src/Lawnchair.js"></script>
+    <script src="components/lawnchair/src/adapters/dom.js"></script>
     <script src="components/lawnchair/src/adapters/indexed-db.js"></script>
+    <script src="components/lawnchair/src/adapters/webkit-sqlite.js"></script>
     <script src="components/jquery/dist/jquery.min.js"></script>
     <script src="components/angular/angular.min.js"></script>
     <script src="components/angular-touch/angular-touch.min.js"></script>
